# AdvancedMechatronics

./: .gitignore  README.md
hw11/.metadata/: .log4j2.xml  version.ini
hw11/.metadata/.plugins/org.eclipse.core.resources/.projects/hw11/: .location
hw11/.metadata/.plugins/org.eclipse.core.resources/.projects/hw11/.indexes/bf/c4/: history.index
hw11/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
hw11/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
hw11/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
hw11/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
hw11/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
hw11/hw11/: .mxproject  .project  hw11.ioc
hw11/hw11/.metadata/: .log4j2.xml  version.ini
hw11/hw11/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
hw11/hw11/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
hw11/hw11/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
hw11/hw11/Core/Src/: main.c
hw11/hw11/STM32CubeIDE/: .cproject  .project
hw11_ws/hw11_pico/: CMakeLists.txt  hw11_pico.c
hw14/hw14/: CMakeLists.txt  hw711-0.c  hx711.c  hx711.h  plot.py
hw2/: CMakeLists.txt
hw2/hw2/: code.py  hw2.c
hw3/I2C/: CMakeLists.txt  I2C.c
hw4/hw4/: CMakeLists.txt  hw4.c
hw5/hw5/: CMakeLists.txt  hw5.c
hw6/hw6/: CMakeLists.txt  hw6.c  tusb_config.h
hw7/hw7/: CMakeLists.txt  README.md  hw7.c
hw8/hw8/: CMakeLists.txt  hw8.c
hw9/: FIR.py  IIR.py  MAF.py  hw9.py
